fix issue #3: Ckeditor cannot browse server's subfolder when inserting an image